After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 766662 - adaptivedemux: fix tag list leak
adaptivedemux: fix tag list leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.9.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-05-19 14:17 UTC by Guillaume Desmottes
Modified: 2016-05-19 19:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
adaptivedemux: fix pending tags leak (908 bytes, patch)
2016-05-19 14:18 UTC, Guillaume Desmottes
committed Details | Review

Description Guillaume Desmottes 2016-05-19 14:17:55 UTC
.
Comment 1 Guillaume Desmottes 2016-05-19 14:18:15 UTC
Created attachment 328193 [details] [review]
adaptivedemux: fix pending tags leak
Comment 2 Tim-Philipp Müller 2016-05-19 19:45:08 UTC
Thanks!

commit d7c47107ce0030600cce303c5dfada5678e6c81d
Author: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk>
Date:   Wed May 18 16:55:38 2016 +0300

    adaptivedemux: fix pending tags leak
    
    https://bugzilla.gnome.org/show_bug.cgi?id=766662