adaptivedemux: fix pending tags leak

https://bugzilla.gnome.org/show_bug.cgi?id=766662